# sbk

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  SPEC.md  benchmark.sh
.github/workflows/: release.yml
src/: checksum.rs  classify.rs  cli.rs  compress.rs  convert.rs  decompress.rs  error.rs  extract.rs  filter.rs  hilbert.rs  info.rs  lib.rs  main.rs  tree.rs  verify.rs
src/codec/: lzma2.rs  mod.rs  zstd.rs
src/format/: frame_dir.rs  header.rs  index.rs  mod.rs
src/preprocess/: json.rs  mca.rs  mod.rs  nbt.rs
src/solid/: compressor.rs  extractor.rs  mod.rs
tests/: integration.rs
