[package]
name = "sbk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast, format-aware archiver for Minecraft worlds — preprocesses MCA, NBT, and JSON files before LZMA2 solid compression"
repository = "https://github.com/MelanX/sbk"
keywords = ["minecraft", "compression", "archive", "mca"]
categories = ["command-line-utilities", "compression", "filesystem"]
readme = "README.md"

[lib]
name = "sbk"
path = "src/lib.rs"

[[bin]]
name = "sbk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
xz2 = "0.1"
zstd = "0.13"
flate2 = "1"
ruzstd = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
rayon = "1"
walkdir = "2"
filetime = "0.2"
glob = "0.3"
serde_json = "1"
indicatif = "0.18"
anyhow = "1"
thiserror = "2"
log = "0.4.29"

[dev-dependencies]
tempfile = "3"
